--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -20,7 +20,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        shell: cmd
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
         working-directory: python-greetings
 
   deploy-to-dev:
@@ -35,8 +38,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
+        shell: cmd
         run: pm2 delete greetings-app-dev & set "errorlevel=0"
       - name: Start new service
+        shell: cmd
         run: pm2 start app.py --name greetings-app-dev -- --port 7001
         working-directory: python-greetings
 
@@ -52,9 +57,11 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
+        shell: cmd
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
+        shell: cmd
         run: npm run greetings greetings_dev
         working-directory: course-js-api-framework
 
@@ -70,8 +77,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
+        shell: cmd
         run: pm2 delete greetings-app-staging & set "errorlevel=0"
       - name: Start new service
+        shell: cmd
         run: pm2 start app.py --name greetings-app-staging -- --port 7002
         working-directory: python-greetings
 
@@ -87,9 +96,11 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
+        shell: cmd
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
+        shell: cmd
         run: npm run greetings greetings_staging
         working-directory: course-js-api-framework
 
@@ -105,8 +116,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
+        shell: cmd
         run: pm2 delete greetings-app-preprod & set "errorlevel=0"
       - name: Start new service
+        shell: cmd
         run: pm2 start app.py --name greetings-app-preprod -- --port 7003
         working-directory: python-greetings
 
@@ -122,9 +135,11 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
+        shell: cmd
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
+        shell: cmd
         run: npm run greetings greetings_preprod
         working-directory: course-js-api-framework
 
@@ -140,8 +155,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
+        shell: cmd
         run: pm2 delete greetings-app-prod & set "errorlevel=0"
       - name: Start new service
+        shell: cmd
         run: pm2 start app.py --name greetings-app-prod -- --port 7004
         working-directory: python-greetings
 
@@ -157,8 +174,10 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
+        shell: cmd
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
+        shell: cmd
         run: npm run greetings greetings_prod
         working-directory: course-js-api-framework
