--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -20,7 +20,7 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Install dependencies
-        shell: cmd
+        shell: bash
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -38,10 +38,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
-        shell: cmd
+        shell: bash
         run: pm2 delete greetings-app-dev & set "errorlevel=0"
       - name: Start new service
-        shell: cmd
+        shell: bash
         run: pm2 start app.py --name greetings-app-dev -- --port 7001
         working-directory: python-greetings
 
@@ -57,11 +57,11 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
-        shell: cmd
+        shell: bash
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
-        shell: cmd
+        shell: bash
         run: npm run greetings greetings_dev
         working-directory: course-js-api-framework
 
@@ -77,10 +77,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
-        shell: cmd
+        shell: bash
         run: pm2 delete greetings-app-staging & set "errorlevel=0"
       - name: Start new service
-        shell: cmd
+        shell: bash
         run: pm2 start app.py --name greetings-app-staging -- --port 7002
         working-directory: python-greetings
 
@@ -96,11 +96,11 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
-        shell: cmd
+        shell: bash
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
-        shell: cmd
+        shell: bash
         run: npm run greetings greetings_staging
         working-directory: course-js-api-framework
 
@@ -116,10 +116,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
-        shell: cmd
+        shell: bash
         run: pm2 delete greetings-app-preprod & set "errorlevel=0"
       - name: Start new service
-        shell: cmd
+        shell: bash
         run: pm2 start app.py --name greetings-app-preprod -- --port 7003
         working-directory: python-greetings
 
@@ -135,11 +135,11 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
-        shell: cmd
+        shell: bash
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
-        shell: cmd
+        shell: bash
         run: npm run greetings greetings_preprod
         working-directory: course-js-api-framework
 
@@ -155,10 +155,10 @@ jobs:
           repository: 'mtararujs/python-greetings'
           path: 'python-greetings'
       - name: Stop existing service
-        shell: cmd
+        shell: bash
         run: pm2 delete greetings-app-prod & set "errorlevel=0"
       - name: Start new service
-        shell: cmd
+        shell: bash
         run: pm2 start app.py --name greetings-app-prod -- --port 7004
         working-directory: python-greetings
 
@@ -174,10 +174,10 @@ jobs:
           repository: 'mtararujs/course-js-api-framework'
           path: 'course-js-api-framework'
       - name: Install dependencies
-        shell: cmd
+        shell: bash
         run: npm install
         working-directory: course-js-api-framework
       - name: Run tests
-        shell: cmd
+        shell: bash
         run: npm run greetings greetings_prod
         working-directory: course-js-api-framework
